Bug 79915 - DOCX export: Text Data lost
Summary: DOCX export: Text Data lost
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium normal
Assignee: Ravindra Vidhate
URL:
Whiteboard: BSA target:4.4.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-06-11 10:19 UTC by Ravindra Vidhate
Modified: 2014-10-17 08:04 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Original File (20.26 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-11 10:19 UTC, Ravindra Vidhate
Details
The Complete file (99.26 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-11 10:20 UTC, Ravindra Vidhate
Details
how the original compares to the re-exports in Word 2013 (118.14 KB, image/png)
2014-06-11 11:51 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ravindra Vidhate 2014-06-11 10:19:29 UTC
Created attachment 100872 [details]
Original File

Problem description: 
The text data is getting lost after exporting as DOCX file through LO

Steps to reproduce:
1. Open the attached docx file in LO.
2. Export the file into docx format.
3. Open the docx file in MS-Office, The text data is getting lost

Current behavior:
The text data is getting lost.

Expected behavior:
The text data should not be lost.
              
Operating System: Ubuntu
Version: 4.4.0.0.alpha0+ Master
Comment 1 Ravindra Vidhate 2014-06-11 10:20:23 UTC
Created attachment 100873 [details]
The Complete file
Comment 2 Yousuf Philips (jay) (retired) 2014-06-11 11:49:59 UTC
Checked on Windows 7 by exporting docx through 4.1.6, 4.2.4, 4.2.6, 4.3 beta 2 and 4.4 alpha back into Office 2013 and there are the results -

4.1 : image not rendered and text flowing behind partially transparent image area

4.2 : text is flowing behind the image

4.3 : a huge chunk of the first paragraph is gone

4.4 : looks good except it doesnt have black outline of image, which isnt there in any of the other versions as well
Comment 3 Yousuf Philips (jay) (retired) 2014-06-11 11:51:21 UTC
Created attachment 100878 [details]
how the original compares to the re-exports in Word 2013
Comment 4 Xisco Faulí 2014-06-11 13:12:13 UTC Comment hidden (obsolete)
Comment 5 Xisco Faulí 2014-06-11 13:35:46 UTC
I'm sorry but I posted the bibisect log of another issue.

THIS CASE HASN'T BEEN BIBISECTED YET!!
Comment 6 Commit Notification 2014-06-16 13:09:40 UTC
Ravindra Vidhate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fe5b3c3357d9e613a0be53ec1e5546a59e21cea0

fdo#79915:Text Data Lost after exporting through LO



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Yousuf Philips (jay) (retired) 2014-06-17 17:05:25 UTC
Hi Ravindra and Michael,

The loss of text was in 4.3 beta 2 and not in the 4.4 alpha according to my testing.
Comment 8 Björn Michaelsen 2014-10-11 13:35:09 UTC
(In reply to Xisco Faulí from comment #5)
> I'm sorry but I posted the bibisect log of another issue.
> 
> THIS CASE HASN'T BEEN BIBISECTED YET!!

Removing bibisected whiteboard status then.
Comment 9 tommy27 2014-10-17 04:44:09 UTC
I do not have MS Word to test, so please anyone could retest with recent master to see if patch in comment 6 did fix the bug?
Comment 10 Yousuf Philips (jay) (retired) 2014-10-17 08:04:18 UTC
It is fixed.