fdo#79915:Text Data Lost after exporting through LO

In the OutputTextNode, the text data is postponed when the in case of
NOT_PROCESSED state of fly frame. This text data is never been processed
later.

When the text data is postponed we should write this before processing
the next text node.

Change-Id: Ib8d5fdcf8dcfb9ff394d32103502150e08bbd521